Disabled automatic font scaling on iOS devices when in landscape view. Issue #4

--- a/css/advanced.css
+++ b/css/advanced.css
@@ -19,6 +19,9 @@ body {
 /* Mobile Landscape CSS */
 /* @media all and (max-device-width: 480px) and (orientation:landscape) */
 @media all and (min-width: 321px) and (max-width: 480px) {
+	html {
+		-webkit-text-size-adjust: none; /* prevent font scaling */
+	}
 	body {
 		width: 30em; /* 480px @ 16px */
 		padding: 0;
